add `editUserPermissions` endpoint
